fix url that start with http

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <input type="text" placeholder="title" ng-model="newFeed.title">
               </label>
               <label class="item item-input">
-                <input type="text" placeholder="URL" ng-model="newFeed.url">
+                <input type="text" placeholder="URL (you do not need to put http://)" ng-model="newFeed.url">
               </label>
             </div>
             <div class="padding">
